--- a/app.json
+++ b/app.json
@@ -19,7 +19,8 @@
         "monochromeImage": "./assets/images/android-icon-monochrome.png"
       },
       "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false
+      "predictiveBackGestureEnabled": false,
+      "package": "com.okosfoci.app"
     },
     "web": {
       "output": "static",
@@ -43,6 +44,7 @@
     "experiments": {
       "typedRoutes": true,
       "reactCompiler": true
-    }
+    },
+    "sdkVersion": "54.0.25"
   }
 }
