--- a/eas.json
+++ b/eas.json
@@ -14,6 +14,11 @@
       "android": {
         "buildType": "app-bundle"
       }
+    },
+    "apk": {
+      "android": {
+        "buildType": "apk"
+      }
     }
   }
 }
